# haxorg

./: .buckconfig  .clang-format  .clang-tidy  .clangd  .cmake-format  .dockerignore  .envrc  .fdignore  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.org  BUCK  CMakeLists.txt  Doxyfile  HaxorgConfig.cmake.in  README.org  Taskfile.yaml  autogen_enums.cmake  codechecker.yaml  codechecker_skip.txt  conanfile.py  conanfile.txt  conanprofile.txt  conanprofile_emcc.txt  conda_toolchain.cmake  conftest.py  debug_pytest.py  functions_aux.cmake  functions_setup.cmake  ignorelist.txt  invoke-ci.yaml  invoke.yaml  justfile  lldb-script.txt  lldb_script.py  package-lock.json  package.json  pyhaxorg.toml  pyproject.toml  (+13 more)
examples/imgui_gui/: CMakeLists.txt  ascii_editor.cpp  ascii_editor.hpp  block_graph.cpp  block_graph.hpp  imconfig.h  imgui_utils.cpp  imgui_utils.hpp  main.cpp  scintilla_editor_widget.cpp  scintilla_editor_widget.hpp  sem_tree_render.cpp  sem_tree_render.hpp  story_grid.cpp  story_grid.hpp
examples/imgui_gui/gui_app/: main.cpp
examples/imgui_gui/gui_lib/: ascii_editor.cpp  ascii_editor.hpp  block_graph.cpp  block_graph.hpp  dir_explorer.cpp  dir_explorer.hpp  doc_editor.cpp  doc_editor.hpp  gui_perfetto.hpp  im_org_ui_common.cpp  im_org_ui_common.hpp  imgui_utils.cpp  imgui_utils.hpp  node_grid_graph.cpp  node_grid_graph.hpp  org_logger.cpp  org_logger.hpp  scintilla_editor_widget.cpp  scintilla_editor_widget.hpp  sem_tree_render.cpp  sem_tree_render.hpp  story_grid.cpp  story_grid.hpp  story_grid_tree.cpp
examples/imgui_gui/gui_test/: ascii_editor_tests.cpp  im_test_common.cpp  im_test_common.hpp  main.cpp  story_grid_tests.cpp  t_block_editor.cpp  t_doc_editor.cpp  t_register_all.cpp  t_scintilla_widget.cpp  t_story_grid.cpp  tests.cpp
examples/qt_gui/org_diagram/: CMakeLists.txt  DebugPainter.hpp  DiagramNode.hpp  DiagramNodeGroup.hpp  DiagramNodeImage.hpp  DiagramNodeRectangle.hpp  DiagramNodeVisual.cpp  DiagramNodeVisual.hpp  DiagramScene.hpp  DiagramTreeModel.hpp  DiagramView.hpp  common.hpp  main.cpp
examples/qt_gui/org_viewer/: CMakeLists.txt  file_agenda_table.cpp  file_agenda_table.hpp  main.cpp  mainwindow.hpp  shared_org_logic.cpp  shared_org_logic.hpp
examples/rest_access/: CMakeLists.txt  main.cpp
scripts/code/: CMakeLists.txt  clang_reflection_lib.cpp  clang_reflection_lib.hpp  clang_reflection_plugin.cpp  clang_reflection_tool.cpp  convert_const_ref.cpp  reflection_defs.proto  test_plugin_target.cpp
scripts/code/py_codegen/: .gitignore  astbuilder_base.py  astbuilder_cpp.py  astbuilder_py.py  codegen.py  gen_tu_cpp.py  org_codegen_data.py  py_textlayout.pyi  setup.cfg  setup_imports.py  test_codegen.py  test_org_use.py
scripts/cxx_codegen/: CMakeLists.txt  branching_include_collector.hpp  clang_reflection_lib.cpp  clang_reflection_lib.hpp  clang_reflection_plugin.cpp  clang_reflection_tool.cpp  convert_const_ref.cpp  main.cpp  profdata_merger.cpp  profdata_merger.hpp  profdata_merger.sql  reflection_collector.cpp  reflection_collector.hpp  reflection_collector_frontend.cpp  reflection_collector_frontend.hpp  reflection_config.hpp  reflection_defs.proto  reflection_demangler.cpp  reflection_demangler.hpp  reflection_demangler.sql  reflection_perf.hpp
scripts/cxx_codegen/profdata_merger/: CMakeLists.txt  profdata_merger.cpp  profdata_merger.sql
scripts/cxx_codegen/reflection_tool/: CMakeLists.txt  clang_reflection_demangler.cpp  clang_reflection_demangler.hpp  clang_reflection_lib.cpp  clang_reflection_lib.hpp  clang_reflection_perf.hpp  clang_reflection_tool.cpp  reflection_defs.proto  reflection_demangler.sql
scripts/cxx_repository/: CMakeLists.txt  code_forensics.cpp  code_forensics.sql  git_interface.hpp  git_ir.hpp  lldb-script.txt  lldb_script.py  program_state.hpp  pyproject.toml  qtcreator_debugging_helper.py  repo_graph.cpp  repo_graph.hpp  repo_processing.cpp  repo_processing.hpp  repo_profile.hpp  warning_config.txt  xray_list.txt
scripts/cxx_repository/cxx_repository/: burndown.py  code_forensics.py  code_forensics_cli.py  orm_model.py
scripts/py_cli/: haxorg.py  haxorg_cli.py  haxorg_export.py  haxorg_export_sqlite.py  haxorg_export_tex.py  pyproject.toml  tracer.py
scripts/py_cli/py_cli/: command_template.py  haxorg.py  haxorg_analyze.py  haxorg_cli.py  haxorg_export.py  haxorg_export_html.py  haxorg_export_pandoc.py  haxorg_export_sqlite.py  haxorg_export_tex.py  haxorg_export_typst.py  haxorg_export_ultraplain.py  haxorg_generate.py  haxorg_opts.py
scripts/py_haxorg/: .gitignore  MANIFEST.in  _build_backend.py  build.py  pyproject.toml  setup.py
scripts/py_haxorg/py_haxorg/: __init__.py  babel.py  babel_plantuml.py  py_adaptagrams.pyi  pyhaxorg.pyi  pyhaxorg_utils.py  pyhaxorg_wrap.py  utils.py
scripts/py_repository/: Dockerfile  README.org  backtrace_addr2line.py  compilation_stats.py  cpack_build_in_fedora.dockerfile  fedora_release.dockerfile  main.qml  poetry_with_deps.sh  pyproject.toml  test_coverage_merge.py  test_cpack_build.py  test_cpack_build.sh
scripts/py_repository/py_repository/: __init__.py  backtrace_addr2line.py  compilation_stats.py  cxx_coverage.jq  cxx_coverage_line.py  gen_coverage_cookies.py  gen_coverage_cxx.py  gen_coverage_info.py  (+11 more)
scripts/py_scriptutils/: pyproject.toml
src/adaptagrams/: CMakeLists.txt  adaptagrams_ir.cpp  adaptagrams_ir.hpp
src/adaptagrams_wrap/: CMakeLists.txt
src/editor/: CMakeLists.txt  DocumentItem.qml  Main.qml  ParagraphEditor.qml  app_state.cpp  app_state.hpp  app_utils.hpp  exporter_qtextdocument.cpp  exporter_qtextdocument.hpp  exporterhtml.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  org_document_edit.cpp  org_document_edit.hpp  org_document_model.cpp  org_document_model.hpp  org_document_outline.cpp  org_document_outline.hpp  org_exporter_html.cpp  org_exporter_html.hpp  org_qml.hpp  org_qml_manual.hpp  org_qml_model.cpp  org_qml_model.hpp  org_qml_node_edit.cpp  org_qml_node_edit.hpp
src/haxorg/: CMakeLists.txt
src/hstd/: CMakeLists.txt
src/py_libs/: CMakeLists.txt  nanobind_utils.hpp  py_type_casters.hpp  pybind11_utils.hpp
(+1441 files in other folders)
