[tool.poetry]
name = "testtest"
version = "0.1.0"
description = ""
authors = ["haxscramper <haxscramper@gmail.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.9.0 <3.13"
beartype = "^0.16.2"
rich = "^13.5.3"
betterproto = {extras = ["compiler"], version = "^1.2.5"}
pytest = "^7.4.2"
py_textlayout = {path = "./scripts/py_textlayout", develop=true}
py_exporters = {path = "./scripts/py_exporters", develop=true}
py_haxorg = {path = "./scripts/py_haxorg", develop=true}
py_scriptutils = {path = "./scripts/py_scriptutils", develop=true}
py_codegen = {path = "./scripts/py_codegen", develop=true}
click = "^8.1.7"
rich-click = "^1.6.1"
toml = "^0.10.2"
click-config-file = "^0.6.0"
plumbum = "^1.8.2"
pydantic = "^2.4.2"
dominate = "^2.8.0"
pyyaml = "^6.0.1"
pyside6 = "^6.6.0"
types-toml = "^0.10.8.7"
igraph = "^0.11.2"
graphviz = "^0.20.1"
deal = "^4.24.3"
pandas = "^2.1.3"
invoke = "^2.2.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
ignore = [
  "F405", # Undefined or defined from `*` imports
  "F403", # `from astbuilder_cpp import *` used; unable to detect undefined names
  "E501", # Line length
  "F841", # Assigned but never used
  "F522", # UNused format arguments
  "F401", # Imported but not used -- just drives me crazy when I write code
]

[tool.yapf]
based_on_style = "google"
column_limit = 90
indent_width = 4
