[project]
name = "testtest"
version = "0.1.0"
description = ""
readme = { file = "README.org", content-type = "text/plain" }
authors = [{ name = "haxscramper", email = "haxscramper@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
  "beartype>=0.22.0,<0.23.0",
  "rich>=13.5.3,<14.0.0",
  "betterproto[compiler]>=1.2.5,<2.0.0",
  "pytest>=8.2.2,<9.0.0",
  "click>=8.1.7,<9.0.0",
  "rich-click>=1.6.1,<2.0.0",
  "toml>=0.10.2,<0.11.0",
  "click-config-file>=0.6.0,<0.7.0",
  "plumbum>=1.8.2,<2.0.0",
  "pydantic>=2.4.2,<3.0.0",
  "dominate>=2.8.0,<3.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "types-toml>=0.10.8.7,<0.11.0.0",
  "igraph>=0.11.2,<0.12.0",
  "graphviz>=0.20.1,<0.21.0",
  "deal>=4.24.3,<5.0.0",
  "pandas>=2.1.3,<3.0.0",
  "more-itertools>=10.1.0,<11.0.0",
  "sqlalchemy>=2.0.24,<3.0.0",
  "hypothesis>=6.92.2,<7.0.0",
  "matplotlib>=3.8.2,<4.0.0",
  "compdb>=0.2.0,<0.3.0",
  "pytest-cov>=4.1.0,<5.0.0",
  "flask>=3.0.2,<4.0.0",
  "flask-cors>=4.0.0,<5.0.0",
  "jsonpath-ng>=1.6.1,<2.0.0",
  "pygments>=2.17.2,<3.0.0",
  "asteval>=0.9.33,<0.10.0",
  "mypy>=1.11.0,<2.0.0",
  "ansi2html>=1.9.2,<2.0.0",
  "psutil>=6.1.1,<7.0.0",
  "pyqt6>=6.9.1,<7.0.0",
  "fuzzywuzzy>=0.18.0,<0.19.0",
  "python-levenshtein>=0.27.1,<0.28.0",
  "seaborn>=0.13.2,<0.14.0",
  "setuptools>=80.9.0,<81.0.0",
  "build>=1.2.2.post1,<2.0.0",
  "shapely>=2.1.2,<3.0.0",
  "scikit-learn>=1.7.2,<2.0.0",
  "glom>=24.11.0,<25.0.0",
  "docker>=7.1.0,<8.0.0",
  "plotly>=6.5.0,<7.0.0",
  "commentjson>=0.9.0,<0.10.0",
  "pre-commit>=4.5.1",
  "yapf>=0.43.0",
  "isort>=7.0.0",
]

[dependency-groups]
dev = [
  "grimp>=3.14",
  "sphinx>=8.1.3",
  "tree-sitter>=0.25.2",
  "tree-sitter-cpp>=0.23.4",
]
local = [
  "py_ci",
  "py_scriptutils",
  "py_codegen",
  "py_cli",
  "py_repository",
  "py_wrappers",
  "cxx_repository",
  "py_haxorg",
]

[tool.uv.workspace]
members = [
  "scripts/py_haxorg",
  "scripts/py_ci",
  "scripts/py_scriptutils",
  "scripts/py_codegen",
  "scripts/py_cli",
  "scripts/py_repository",
  "scripts/py_wrappers",
  "scripts/cxx_repository",
]
exclude = [
  "scripts/py_repository/py_repository/code_analysis/codechecker_environment",
]

[tool.uv.sources]
py_ci = { workspace = true }
py_scriptutils = { workspace = true }
py_codegen = { workspace = true }
py_cli = { workspace = true }
py_repository = { workspace = true }
py_wrappers = { workspace = true }
cxx_repository = { workspace = true }
py_haxorg = { workspace = true }

[tool.isort]
profile = "google"
force_single_line = false
force_sort_within_sections = true
combine_as_imports = true
multi_line_output = 3
line_length = 90
include_trailing_comma = true

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
# on what to do instead, and I don't have time to deal with this bullshit, so fixing to whatever version
# I have installed at the moment.

[tool.pytest.ini_options]
log_cli_format = "%(levelname)s [%(name)s %(filename)s:%(lineno)d] %(message)s"
log_capture_format = "%(levelname)s [%(name)s %(filename)s:%(lineno)d] %(message)s"
testpaths = ["tests"]
addopts = "--color=yes"
console_output_style = "classic"
markers = [
  "unstable: fuzzy tests that can randomly fail in CI",
  "x11: must be run in x11 environment to work",
  "bad_asan: code triggers sanitizer error",                                               # External libraries cannot be fixed and trigger errors
  "test_coverage_annotation_file_cxx: C++ test coverage annotation extraction for a file",
  "test_gtest_class(name, params): C++ Google test class runner",
  "test_gtest_function(name, params): C++ Google test individual test instance",
  "test_gtest_tag(tag): Additional metadata tagging for the google test annotations",
  "test_gtest: C++ google test wrapped as pytest-runnable",
  "test_qtest: Qtest wrapped as pytest-runnable",
  "test_release: Reduced test suite done from the packaged release",
]

[tool.ruff]
ignore = [
  "F405", # Undefined or defined from `*` imports
  "F403", # `from astbuilder_cpp import *` used; unable to detect undefined names
  "E501", # Line length
  "F841", # Assigned but never used
  "F522", # UNused format arguments
  "F401", # Imported but not used -- just drives me crazy when I write code
  "E712", # Allow comparisons to `== False`, they can be more readable/explicit
]


[tool.yapf]
based_on_style = "google"
column_limit = 90
indent_width = 4
DISABLE_ENDING_COMMA_HEURISTIC = false

[tool.mypy]
exclude = "scripts/py_haxorg/py_haxorg/pyhaxorg.pyi"
# strict = true
warn_unused_ignores = false
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]
